2010-02-15 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.18.5 release.

	* README
	* NEWS
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc

2010-02-15 Braden McDaniel  <braden@endoframe.com>

	Update AX_CHECK_GL and AX_CHECK_GLU to the 2010-01-25 release.

	This addresses a problem with correctly detecting and using the
	Apple OpenGL framework.

	* m4/acx_pthread.m4: Removed; replaced by ax_pthread.m4.
	* m4/ax_check_gl.m4
	* m4/ax_check_glu.m4
	* m4/ax_pthread.m4: Added.

2010-02-14 Braden McDaniel  <braden@endoframe.com>

	Use Boost.ScopeExit instead of ScopeGuard.

	* README: Note Boost 1.38 requirement.
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/local/conf.cpp
	* src/libopenvrml/openvrml/local/error.cpp
	* src/libopenvrml/openvrml/local/externproto.cpp
	* src/libopenvrml/openvrml/local/node_metatype_registry_impl.cpp
	* src/libopenvrml/openvrml/local/uri.cpp
	* src/libopenvrml/openvrml/local/xml_reader.cpp
	* src/libopenvrml/openvrml/script.cpp
	* src/local/libopenvrml-dl/openvrml/local/dl.cpp
	* src/mozilla-plugin/openvrml.cpp
	* src/node/vrml97/grouping_node_base.h
	* src/node/vrml97/image_stream_listener.cpp
	* src/node/vrml97/text.cpp
	* src/openvrml-player/curlbrowserhost.cpp
	* src/openvrml-player/filechooserdialog.cpp
	* src/openvrml-player/player.cpp
	* src/openvrml-xembed/browser.cpp
	* src/openvrml-xembed/browserfactory.cpp
	* src/openvrml-xembed/main.cpp
	* src/script/java.cpp
	* src/script/javascript.cpp
	* tests/browser.cpp

2010-02-13 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.18.4 release.

	* README
	* NEWS
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj