@@ -15,7 +15,7 @@
 # rather than the standard "GLvoid (*)()".  If the former condition is
 # detected, this macro defines "HAVE_VARARGS_GLU_TESSCB".
 #
-# version: 2.3
+# version: 2.4
 # author: Braden McDaniel <braden@endoframe.com>
 #
 # This program is free software; you can redistribute it and/or modify
@@ -70,13 +70,14 @@ AC_CACHE_CHECK([for OpenGL Utility library], [ax_cv_check_glu_libglu],
 [ax_cv_check_glu_libglu=no
 ax_save_CPPFLAGS=$CPPFLAGS
 CPPFLAGS="$GL_CFLAGS $CPPFLAGS"
+ax_save_LDFLAGS=$LDFLAGS
 ax_save_LIBS=$LIBS
 
 #
 # First, check for the possibility that everything we need is already in
 # GL_LIBS.
 #
-LIBS="$GL_LIBS $ax_save_LIBS"
+LDFLAGS="$ax_save_LDFLAGS $GL_LIBS"
 #
 # libGLU typically links with libstdc++ on POSIX platforms.
 # However, setting the language to C++ means that test program
@@ -89,26 +90,27 @@ AS_IF([test X$ax_compiler_ms = Xyes],
 AC_LINK_IFELSE([AX_CHECK_GLU_PROGRAM],
                [ax_cv_check_glu_libglu=yes],
                [LIBS=""
-               ax_check_libs="-lglu32 -lGLU"
-               for ax_lib in ${ax_check_libs}; do
-                 AS_IF([test X$ax_compiler_ms = Xyes],
-                       [ax_try_lib=`echo $ax_lib | $SED -e 's/^-l//' -e 's/$/.lib/'`],
-                       [ax_try_lib=$ax_lib])
-                 LIBS="$ax_try_lib $GL_LIBS $ax_save_LIBS"
-                 AC_LINK_IFELSE([AX_CHECK_GLU_PROGRAM],
-                                [ax_cv_check_glu_libglu=$ax_try_lib; break])
-               done])
+                ax_check_libs="-lglu32 -lGLU"
+                for ax_lib in ${ax_check_libs}; do
+                  AS_IF([test X$ax_compiler_ms = Xyes],
+                        [ax_try_lib=`echo $ax_lib | $SED -e 's/^-l//' -e 's/$/.lib/'`],
+                        [ax_try_lib=$ax_lib])
+                  LIBS="$ax_try_lib $ax_save_LIBS"
+                  AC_LINK_IFELSE([AX_CHECK_GLU_PROGRAM],
+                                 [ax_cv_check_glu_libglu=$ax_try_lib; break])
+                done])
 AS_IF([test X$ax_compiler_ms = Xyes],
       [AC_LANG_POP([C])])
 AC_LANG_POP([C++])
 
 LIBS=$ax_save_LIBS
+LDFLAGS=$ax_save_LDFLAGS
 CPPFLAGS=$ax_save_CPPFLAGS])
 AS_IF([test "X$ax_cv_check_glu_libglu" = Xno],
       [no_glu=yes; GLU_CFLAGS=""; GLU_LIBS=""],
       [AS_IF([test "X$ax_cv_check_glu_libglu" = Xyes],
-             [GLU_LIBS=$GL_LIBS],
-             [GLU_LIBS="$ax_cv_check_glu_libglu $GL_LIBS"])])
+             [GLU_LIBS=""],
+             [GLU_LIBS="$ax_cv_check_glu_libglu"])])
 AC_SUBST([GLU_CFLAGS])
 AC_SUBST([GLU_LIBS])
 
